--- a/index.html
+++ b/index.html
@@ -2,12 +2,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Resume a Personal Category Flat Bootstrap Responsive Website Template | Home :: w3layouts</title>
+<title>Akhilesh Resume</title>
 <!-- for-mobile-apps -->
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta name="keywords" content="Resume Responsive web template, Bootstrap Web Templates, Flat Web Templates, Android Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyEricsson, Motorola web design" />
+<meta name="keywords" content="Akhilesh Resume , Akhileshsh026@gmail.com , Akhileshsh026@hotmail.com, AkhileshGithub" />
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
 		function hideURLbar(){ window.scrollTo(0,1); } </script>
 <!-- //for-mobile-apps -->
