UPdating the address

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+﻿
 <!DOCTYPE html>
 <html>
 <head>
@@ -120,7 +120,7 @@
 				<li><a href="http://akhileshsh026.github.io">akhileshsh026.github.io</a></li>
 				<li>+917869643112</li>
 				<li>live:akhileshsh026</li>
-				<li> BTM Layout, 1st phase ,Bangalore</li>
+				<li> 14th Cross , Roopena Agrahara ,Bangalore</li>
 			</ul>
 			<div class="clearfix"></div>
 		</div>
