--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 				<li><a href="http://akhileshsh026.github.io">akhileshsh026.github.io</a></li>
 				<li>+917869643112</li>
 				<li>live:akhileshsh026</li>
-				<li> 14th Cross , Roopena Agrahara ,Bangalore</li>
+				<li> Roopena Agrahara ,Bangalore</li>
 			</ul>
 			<div class="clearfix"></div>
 		</div>
