--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 					<div class="tab-pane active in" id="tab1">
 						<div class="contact-form">
 							<ul>
-								<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>BTM Layout , 1st phase <span>Banaglore City.</span></li>
+								<li><i class="glyphicon glyphicon-map-marker" aria-hidden="true"></i>Roopena Agrahara <span>Banaglore City.</span></li>
 								<li><i class="glyphicon glyphicon-envelope" aria-hidden="true"></i><a href="mailto:info@example.com">akhileshsh026@hotmail.com</a></li>
 								<li><i class="glyphicon glyphicon-earphone" aria-hidden="true"></i>+917869643112</li>
 							</ul>
@@ -442,10 +442,10 @@
             </div>
 		</div>
 		<div class="col-md-6 contact-right ">
-			<iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d2482.432383990807!2d0.028213999961443994!3d51.52362882484525!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sin!4v1423469959819" frameborder="0" style="border:0"></iframe>
+			<iframe  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBY-AZe3BqghaA_cM56-eB3RulKJKcTbn8&q=Space+Needle,Seattle+WA" allowfullscreen> frameborder="0" style="border:0"></iframe>
 		</div>
 		<div class="clearfix"></div>
-		<p class="copy-right">&copy 2016 Resume. All rights reserved |</p>
+		<p class="copy-right">&copy 2017 Resume. All rights reserved |</p>
 	</div>
 </div>
 <!-- //contact -->
