--- a/index.html
+++ b/index.html
@@ -442,7 +442,8 @@
             </div>
 		</div>
 		<div class="col-md-6 contact-right ">
-			<iframe  src="https://www.google.com/maps/embed/v1/place?key=AIzaSyBY-AZe3BqghaA_cM56-eB3RulKJKcTbn8&q=Space+Needle,Seattle+WA" allowfullscreen> frameborder="0" style="border:0"></iframe>
+			<iframe  ssrc="https://www.google.com/maps/embed/v1/place?key=AIzaSyBY-AZe3BqghaA_cM56-eB3RulKJKcTbn8&q=Space+Needle,Seattle+WA" allowfullscreen> 
+             frameborder="0" style="border:0"></iframe>
 		</div>
 		<div class="clearfix"></div>
 		<p class="copy-right">&copy 2017 Resume. All rights reserved |</p>
