not Using the API but only the Embeded maps feature from the sahre place menu in maps .

--- a/index.html
+++ b/index.html
@@ -442,8 +442,7 @@
             </div>
 		</div>
 		<div class="col-md-6 contact-right ">
-			<iframe  ssrc="https://www.google.com/maps/embed/v1/place?key=AIzaSyBY-AZe3BqghaA_cM56-eB3RulKJKcTbn8&q=Space+Needle,Seattle+WA" allowfullscreen> 
-             frameborder="0" style="border:0"></iframe>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d243.0603670785452!2d77.62402832058991!3d12.909914949690807!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3bae14ee689802e3%3A0x353fba8ae82f15cb!2sMaruthi+Pg+(Gents)!5e0!3m2!1sen!2ssg!4v1508843338082" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
 		</div>
 		<div class="clearfix"></div>
 		<p class="copy-right">&copy 2017 Resume. All rights reserved |</p>
